헤더 css 수정 및 링크 삽입

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                       <!-- <li><a href="notice.html">공지사항</a></li> -->
                     </ul>
                   </div>
-                  <hr />
+                  <!-- <hr /> -->
                   <div class="side-bottom">
                     <h3 class="side-bottom-title">카테고리</h3>
                     <ul class="side-bottom-menu">
@@ -349,8 +349,8 @@
             <!-- <li><a href="#">구독</a></li> -->
             <li><a href="#brands">브랜드</a></li>
             <li><a href="#review">리뷰</a></li>
-            <li><a href="#">소개</a></li>
-            <li><a href="notice.html">공지사항</a></li>
+            <li><a href="about_us.html">소개</a></li>
+            <li><a href="notice copy.html">공지사항</a></li>
           </ul>
           <div class="head-logo">
             <a href="index.html">
@@ -394,8 +394,8 @@
             <!-- <li><a href="#">구독</a></li> -->
             <li><a href="#brands">브랜드</a></li>
             <li><a href="#review">리뷰</a></li>
-            <li><a href="#">소개</a></li>
-            <li><a href="notice.html">공지사항</a></li>
+            <li><a href="about_us.html">소개</a></li>
+            <li><a href="notice copy.html">공지사항</a></li>
           </ul>
         </div>
       </div>
