--- a/about_us.html
+++ b/about_us.html
@@ -135,10 +135,10 @@
                         <li><a href="index.html#popular">인기</a></li>
                         <li><a href="index.html#brands">브랜드</a></li>
                         <li><a href="index.html#review">리뷰</a></li>
-                        <li><a href="notice copy.html">공지사항</a></li>
+                        <!-- <li><a href="notice copy.html">공지사항</a></li> -->
                       </ul>
                     </div>
-                    <hr />
+                    <!-- <hr /> -->
                     <div class="side-bottom">
                       <h3 class="side-bottom-title">카테고리</h3>
                       <ul class="side-bottom-menu">
@@ -220,7 +220,7 @@
               <li><a href="index.html#popular">인기</a></li>
               <li><a href="index.html#brands">브랜드</a></li>
               <li><a href="index.html#review">리뷰</a></li>
-              <li><a href="#">소개</a></li>
+              <li><a href="about_us.html">소개</a></li>
               <li><a href="notice copy.html">공지사항</a></li>
             </ul>
             <div class="head-logo">
@@ -264,8 +264,8 @@
               <li><a href="index.html#popular">인기</a></li>
               <li><a href="index.html#brands">브랜드</a></li>
               <li><a href="index.html#review">리뷰</a></li>
-              <li><a href="#">소개</a></li>
-              <li><a href="notice.html">공지사항</a></li>
+              <li><a href="about_us.html">소개</a></li>
+              <li><a href="notice copy.html">공지사항</a></li>
             </ul>
           </div>
         </div>
