--- a/notice copy.html
+++ b/notice copy.html
@@ -229,7 +229,7 @@
                       <li><a href="index.html#popular">인기</a></li>
                       <li><a href="index.html#brands">브랜드</a></li>
                       <li><a href="index.html#review">리뷰</a></li>
-                      <li><a href="notice copy.html">공지사항</a></li>
+                      <!-- <li><a href="notice copy.html">공지사항</a></li> -->
                     </ul>
                   </div>
                   <hr />
@@ -367,7 +367,7 @@
     <section class="main">
       <div class="inner">
         <h1>NOTICE</h1>
-        <hr />
+        <!-- <hr /> -->
         <!-- 공지사항 게시판 -->
         <table class="notice-board">
           <!-- thead: 타이틀헤드, tr : 테이블 가로, td: 테이블 데이터 -->
