배너이미지 수정/글씨 정렬 드읃ㅇ

--- a/about_us.html
+++ b/about_us.html
@@ -57,16 +57,15 @@
   </head>
   <body>
     <div class="wrap">
-      <!-- 헤더 영역 -->
       <header class="header">
         <div class="container">
           <div class="header-top">
             <ul class="head-navi">
-              <div class="navi-cate">
+              <!-- <div class="navi-cate">
                 <div class="cate-right">
                   <ul class="depth-top">
                     <li>
-                      <a href="#">
+                      <a href="index.html#event" style="background-color: aqua" class="aaaa">
                         <img src="images/A/icon/submenu-icon/plastic.png" alt="소재_플라스틱 아이콘" />
                         <span>플라스틱</span>
                       </a>
@@ -97,7 +96,7 @@
                     </li>
                   </ul>
                 </div>
-              </div>
+              </div> -->
               <li>
                 <button class="cate-close">X</button>
                 <a href="#" id="category-icon">
@@ -131,15 +130,16 @@
                         <input type="text" placeholder="입력 후 엔터" />
                       </div>
                       <ul class="side-top-menu">
+                        <li><a href="index.html#material-area" class="category-title1">카테고리</a></li>
                         <li><a href="index.html#event">이벤트</a></li>
                         <li><a href="index.html#popular">인기</a></li>
                         <li><a href="index.html#brands">브랜드</a></li>
                         <li><a href="index.html#review">리뷰</a></li>
-                        <!-- <li><a href="notice copy.html">공지사항</a></li> -->
+                        <li><a href="notice.html">공지사항</a></li>
                       </ul>
                     </div>
-                    <!-- <hr /> -->
-                    <div class="side-bottom">
+                    <hr />
+                    <!-- <div class="side-bottom">
                       <h3 class="side-bottom-title">카테고리</h3>
                       <ul class="side-bottom-menu">
                         <li>
@@ -176,10 +176,10 @@
                     </div>
                   </div>
                 </a>
-              </li>
+              </li> -->
               <li>
-                <a href="#" class="category-title">카테고리</a>
-                <div class="navi-cate">
+                <li><a href="index.html#material-area" class="category-title1">카테고리</a></li>
+                <!-- <div class="navi-cate">
                   <div class="cate-right">
                     <ul class="depth-top">
                       <li>
@@ -214,14 +214,14 @@
                       </li>
                     </ul>
                   </div>
-                </div>
+                </div> -->
               </li>
               <li><a href="index.html#event">이벤트</a></li>
               <li><a href="index.html#popular">인기</a></li>
               <li><a href="index.html#brands">브랜드</a></li>
               <li><a href="index.html#review">리뷰</a></li>
               <li><a href="about_us.html">소개</a></li>
-              <li><a href="notice copy.html">공지사항</a></li>
+              <!-- <li><a href="notice.html">공지사항</a></li> -->
             </ul>
             <div class="head-logo">
               <a href="index.html">
@@ -259,13 +259,13 @@
           </div>
           <div class="header-bottom">
             <ul class="navi-bottom">
-              <li><a href="#" class="category-title">카테고리</a></li>
+              <li><a href="index.html#material-area" class="category-title1">카테고리</a></li>
               <li><a href="index.html#event">이벤트</a></li>
               <li><a href="index.html#popular">인기</a></li>
               <li><a href="index.html#brands">브랜드</a></li>
               <li><a href="index.html#review">리뷰</a></li>
               <li><a href="about_us.html">소개</a></li>
-              <li><a href="notice copy.html">공지사항</a></li>
+              <!-- <li><a href="notice.html">공지사항</a></li> -->
             </ul>
           </div>
         </div>
