--- a/detail-page.html
+++ b/detail-page.html
@@ -316,10 +316,11 @@
           <div class="detile-tab-container">
             <div class="detile-tab-container-line">
               <button class="detile-tab-button">상품 설명</button>
-            </div>
-            <div class="detile-tab-container-line">
               <button class="detile-tab-button">브랜드 소개</button>
             </div>
+            <!-- <div class="detile-tab-container-line">
+             
+            </div> -->
           </div>
 
           <!-- 상품 설명 탭 내용 -->
