--- a/index.html
+++ b/index.html
@@ -450,11 +450,7 @@
       </div>
     </section>
     <!-- 쿠폰 알림 메시지 -->
-    <div id="couponAlert" class="coupon-alert" style="display: none">
-      쿠폰이 지급되었습니다! <br />
-      <br />
-      로그인 또는 회원가입을 해주세요
-    </div>
+    <div id="couponAlert" class="coupon-alert" style="display: none">로그인 또는 회원가입을 해주세요</div>
     <!-- 라인배너 영역 -->
     <!-- <div class="line_banner">
         <div class="line_container">
@@ -533,31 +529,31 @@
             <div class="swiper-slide banne-slide">
               <a href="#">
                 <img src="images/B/main_banner/1920_banner01-2.png" alt="배너1_1920" class="b1920px" />
-                <img src="images/A/banner/768_banner01.png" alt="배너1_768" class="b768px" />
+                <img src="images/B/banner/768_banner01.png" alt="배너1_768" class="b768px" />
               </a>
             </div>
             <div class="swiper-slide banne-slide">
               <a href="#">
                 <img src="images/B/main_banner/1920_banner02-2.png" alt="배너1_1920" class="b1920px" />
-                <img src="images/A/banner/768_banner02.png" alt="배너1_1920" class="b768px" />
+                <img src="images/B/banner/768_banner02.png" alt="배너1_1920" class="b768px" />
               </a>
             </div>
             <div class="swiper-slide banne-slide">
               <a href="#">
                 <img src="images/B/main_banner/1920_banner03-2.png" alt="배너1_1920" class="b1920px" />
-                <img src="images/A/banner/768_banner03.png" alt="배너1_1920" class="b768px" />
+                <img src="images/B/banner/768_banner03.png" alt="배너1_1920" class="b768px" />
               </a>
             </div>
             <div class="swiper-slide banne-slide">
               <a href="#">
                 <img src="images/B/main_banner/1920_banner04-2.png" alt="배너1_1920" class="b1920px" />
-                <img src="images/A/banner/768_banner04.png" alt="배너1_1920" class="b768px" />
+                <img src="images/b/banner/768_banner04.png" alt="배너1_1920" class="b768px" />
               </a>
             </div>
             <div class="swiper-slide banne-slide">
               <a href="#">
                 <img src="images/B/main_banner/1920_banner05-2.png" alt="배너1_1920" class="b1920px" />
-                <img src="images/A/banner/768_banner05.png" alt="배너1_1920" class="b768px" />
+                <img src="images/b/banner/768_banner05.png" alt="배너1_1920" class="b768px" />
               </a>
             </div>
           </div>
@@ -940,9 +936,9 @@
             <p class="product-name">도자 귀걸이 반지 선물세트</p>
             <p class="product-price">56,000원</p>
             <div class="popular-rating">
-            <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" class="rating-icon" />
-            <span>(8,856)</span>
-          </div>
+              <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" class="rating-icon" />
+              <span>(8,856)</span>
+            </div>
             <div class="add-to-cart">
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="도자 귀걸이 반지 선물세트" data-price="56000" />
             </div>
@@ -955,9 +951,9 @@
             <p class="product-name">거북이 보틀 오프너</p>
             <p class="product-price">12,300원</p>
             <div class="popular-rating">
-            <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" class="rating-icon" />
-            <span>(7,724)</span>
-          </div>
+              <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" class="rating-icon" />
+              <span>(7,724)</span>
+            </div>
             <div class="add-to-cart">
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="거북이 보틀 오프너" data-price="12300" />
             </div>
@@ -1045,7 +1041,7 @@
       <div class="popup-content">
         <h2>장바구니 내용</h2>
         <ul id="cartItemsList"></ul>
-        <button onclick="closeCartPopup()">닫기</button>
+        <button onclick="closeCartPopup()" class="popclose">닫기</button>
         <!-- 클로즈 버튼 추가 -->
       </div>
     </div>
@@ -1158,6 +1154,28 @@
               </a>
             </div>
             <!-- notice5 -->
+            <div class="swiper-slide notice-swiper-slide">
+              <a href="#">
+                <img src="images/B/e.banner/1920_notice2.png" alt="구독" />
+                <p class="notice_title">새로운 소식 & 자주 묻는 질문</p>
+                <p class="notice_text">정키펑키 소식은 이곳에서 확인해요~</p>
+              </a>
+            </div>
+            <!-- notice6 -->
+            <div class="swiper-slide notice-swiper-slide">
+              <a href="#">
+                <img src="images/B/e.banner/1920_notice2.png" alt="구독" />
+                <p class="notice_title">새로운 소식 & 자주 묻는 질문</p>
+                <p class="notice_text">정키펑키 소식은 이곳에서 확인해요~</p>
+              </a>
+            </div>
+            <div class="swiper-slide notice-swiper-slide">
+              <a href="#">
+                <img src="images/B/e.banner/1920_notice2.png" alt="구독" />
+                <p class="notice_title">새로운 소식 & 자주 묻는 질문</p>
+                <p class="notice_text">정키펑키 소식은 이곳에서 확인해요~</p>
+              </a>
+            </div>
             <div class="swiper-slide notice-swiper-slide">
               <a href="#">
                 <img src="images/B/e.banner/1920_notice2.png" alt="구독" />
