--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
       </div>
     </section>
     <!-- 배너 영역 -->
-    <div class="banner searchable" >
+    <div class="banner searchable">
       <!-- 배너 슬라이드 -->
       <div class="banner-slide-area">
         <div class="swiper Banner">
@@ -936,7 +936,7 @@
       </div>
     </div>
     <!-- 인기 아이템 -->
-    <section class="popular-items-section searchable"  id="popular">
+    <section class="popular-items-section searchable" id="popular">
       <div class="container">
         <h2 class="section-title">인기 아이템</h2>
         <a href="#" class="more-link">더 보기</a>
@@ -1177,39 +1177,39 @@
             <!-- notice4 -->
             <div class="swiper-slide notice-swiper-slide">
               <a href="#">
-                <img src="images/B/e.banner/1920_notice1.png" alt="구독" />
-                <p class="notice_title">정키펑키 구독 이벤트</p>
-                <p class="notice_text">구독시 첫 구매 20% 할인쿠폰 지급</p>
+                <img src="images/B/e.banner/notice4.png" alt="구독" />
+                <p class="notice_title">나만의 소소한 재활용품</p>
+                <p class="notice_text">재활용으로 소품만들어 보기  </p>
               </a>
             </div>
             <!-- notice5 -->
             <div class="swiper-slide notice-swiper-slide">
               <a href="#">
-                <img src="images/B/e.banner/1920_notice2.png" alt="구독" />
-                <p class="notice_title">새로운 소식 & 자주 묻는 질문</p>
-                <p class="notice_text">정키펑키 소식은 이곳에서 확인해요~</p>
+                <img src="images/B/e.banner/notice5.png" alt="구독" />
+                <p class="notice_title">업사이클 프리마켓 오픈</p>
+                <p class="notice_text">2024.11.07~11.30 진행 예정</p>
               </a>
             </div>
             <!-- notice6 -->
             <div class="swiper-slide notice-swiper-slide">
               <a href="#">
-                <img src="images/B/e.banner/1920_notice2.png" alt="구독" />
-                <p class="notice_title">새로운 소식 & 자주 묻는 질문</p>
-                <p class="notice_text">정키펑키 소식은 이곳에서 확인해요~</p>
+                <img src="images/B/e.banner/notice6.png" alt="구독" />
+                <p class="notice_title">재활용의 가치을 입히다 </p>
+                <p class="notice_text">유용하게 새용한 물건의 새로운 삶</p>
               </a>
             </div>
             <div class="swiper-slide notice-swiper-slide">
               <a href="#">
-                <img src="images/B/e.banner/1920_notice2.png" alt="구독" />
-                <p class="notice_title">새로운 소식 & 자주 묻는 질문</p>
-                <p class="notice_text">정키펑키 소식은 이곳에서 확인해요~</p>
+                <img src="images/B/e.banner/notice7.png" alt="구독" />
+                <p class="notice_title">신규브랜드 상품 보러가기</p>
+                <p class="notice_text">정키펑키에 새로운 장인들이 왔어요~!</p>
               </a>
             </div>
             <div class="swiper-slide notice-swiper-slide">
               <a href="#">
-                <img src="images/B/e.banner/1920_notice2.png" alt="구독" />
-                <p class="notice_title">새로운 소식 & 자주 묻는 질문</p>
-                <p class="notice_text">정키펑키 소식은 이곳에서 확인해요~</p>
+                <img src="images/B/e.banner/notice8.png" alt="구독" />
+                <p class="notice_title">이것도?업사이클링!?</p>
+                <p class="notice_text">말하지 않으면 새상품 같은 업사이클링</p>
               </a>
             </div>
             <!-- 슬라이드 끝-->
