--- a/index.html
+++ b/index.html
@@ -1137,6 +1137,62 @@
               <p class="grey">테이블의 정말 마음에 들어요.</p>
               <p class="description">모든 장식과 어울리는 세련된 디자인이 특징입니다. 나무 상판은 아름답게 마감되어 고급스러워요.</p>
             </div>
+            <!-- 리뷰 아이템 1 -->
+            <div class="swiper-slide review-item">
+              <img src="images/review/review1.png" alt="리뷰1" class="review-image" />
+              <h3 class="r_title">프로젝트 노하우</h3>
+              <p class="bold">체커보드백</p>
+              <p class="grey">의미있는 활동이라서 뿌듯했습니다!</p>
+              <p class="description">프로젝트 노하우의 양말락 시리즈를 진심으로 응원합니다. 이번 체커보드백도 아주 마음에 들었어요!</p>
+            </div>
+            <!-- 리뷰 아이템 2 -->
+            <div class="swiper-slide review-item">
+              <img src="images/review/review2.png" alt="리뷰2" class="review-image" />
+              <h3 class="r_title">LifeSalem</h3>
+              <p class="bold">버섯 조명</p>
+              <p class="grey">서미페에서부터 관심가졌고 기다리고 있었어요!</p>
+              <p class="description">앞으로도 역사가 공존하는 디자인과 의미있는 작업들이 계속되길 바랍니다.</p>
+            </div>
+            <!-- 리뷰 아이템 3 -->
+            <div class="swiper-slide review-item">
+              <img src="images/review/review3.png" alt="리뷰3" class="review-image" />
+              <h3 class="r_title">오도즈 슾</h3>
+              <p class="bold">기타 테이블</p>
+              <p class="grey">테이블의 정말 마음에 들어요.</p>
+              <p class="description">모든 장식과 어울리는 세련된 디자인이 특징입니다. 나무 상판은 아름답게 마감되어 고급스러워요.</p>
+            </div>
+            <!-- 리뷰 아이템 4 -->
+            <div class="swiper-slide review-item">
+              <img src="images/review/review4.png" alt="리뷰4" class="review-image" />
+              <h3 class="r_title">하을</h3>
+              <p class="bold">셔링 책커버</p>
+              <p class="grey">유니크하고 예쁘고 마음에 들어요.</p>
+              <p class="description">고민하다가 구매했는데, 정말 만족하고 있어요. 계속 사용하는 중입니다.</p>
+            </div>
+            <!-- 리뷰 아이템 5 -->
+            <div class="swiper-slide review-item">
+              <img src="images/review/review1.png" alt="리뷰1" class="review-image" />
+              <h3 class="r_title">프로젝트 노하우</h3>
+              <p class="bold">체커보드백</p>
+              <p class="grey">의미있는 활동이라서 뿌듯했습니다!</p>
+              <p class="description">프로젝트 노하우의 양말락 시리즈를 진심으로 응원합니다. 이번 체커보드백도 아주 마음에 들었어요!</p>
+            </div>
+            <!-- 리뷰 아이템 6 -->
+            <div class="swiper-slide review-item">
+              <img src="images/review/review4.png" alt="리뷰4" class="review-image" />
+              <h3 class="r_title">하을</h3>
+              <p class="bold">셔링 책커버</p>
+              <p class="grey">유니크하고 예쁘고 마음에 들어요.</p>
+              <p class="description">고민하다가 구매했는데, 정말 만족하고 있어요. 계속 사용하는 중입니다.</p>
+            </div>
+            <!-- 리뷰 아이템 7 -->
+            <div class="swiper-slide review-item">
+              <img src="images/review/review3.png" alt="리뷰3" class="review-image" />
+              <h3 class="r_title">오도즈 슾</h3>
+              <p class="bold">기타 테이블</p>
+              <p class="grey">테이블의 정말 마음에 들어요.</p>
+              <p class="description">모든 장식과 어울리는 세련된 디자인이 특징입니다. 나무 상판은 아름답게 마감되어 고급스러워요.</p>
+            </div>
             <!-- 리뷰아이템 끝 -->
           </div>
           <!-- 스크롤라인 추가 -->
