인덱스 수정

--- a/index.html
+++ b/index.html
@@ -404,11 +404,11 @@
                   <img src="images/A/icon/popup-icon/user-icon.svg" alt="유저 아이콘" />
                 </a>
               </div>
-              <div class="cartBt">
+              <!-- <div class="cartBt">
                 <a href="#">
                   <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
                 </a>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
