인스타 로고 삽입 및 헤더 검색창 오류 수정

--- a/index.html
+++ b/index.html
@@ -277,12 +277,11 @@
                             <!-- <span>로그인</span> -->
                           </a>
                         </div>
-                        <div class="cartBt">
+                        <!-- <div class="cartBt">
                           <a href="#">
                             <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
-                            <!-- <span>카트</span> -->
                           </a>
-                        </div>
+                        </div> -->
                       </div>
                       <input type="text" placeholder="입력 후 엔터" />
                     </div>
@@ -404,11 +403,11 @@
                   <img src="images/A/icon/popup-icon/user-icon.svg" alt="유저 아이콘" />
                 </a>
               </div>
-              <div class="cartBt">
+              <!-- <div class="cartBt">
                 <a href="#">
                   <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
                 </a>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -948,7 +947,7 @@
             <img src="images/product images/pd_img (1).png" alt="모어포 모레 플라스틱 비누받침" class="product-image" />
             <p class="product-brand">모어포 모레</p>
             <p class="product-name">플라스틱 비누받침</p>
-            <p class="product-price">21,000원</p>
+            <p class="product-price"><span class="sale-item">21,000원</span>16,500원</p>
             <div class="popular-rating">
               <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" class="rating-icon" />
               <span>(11,347)</span>
@@ -956,7 +955,9 @@
             <div class="add-to-cart">
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="모어포 모레 플라스틱 비누받침" data-price="21000" />
             </div>
+            <img src="images/B/icon/sale_scratch.png" alt="스크래치 할인" class="sale-scratch">
           </div>
+          
           <!-- 2번 상품 -->
           <div class="product-item" data-aos="fade-up" data-aos-delay="100">
             <div class="ranking-badge"><br />2위</div>
@@ -993,7 +994,7 @@
             <img src="images/product images/pd_img (16).png" alt="리사이클 유리팔찌" class="product-image" />
             <p class="product-brand">유리노리</p>
             <p class="product-name">리사이클 유리팔찌</p>
-            <p class="product-price">32,000원</p>
+            <p class="product-price"><span class="sale-item">32,000원</span>21,000원</p>
             <div class="popular-rating">
               <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" class="rating-icon" />
               <span>(6,249)</span>
@@ -1001,6 +1002,7 @@
             <div class="add-to-cart">
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="리사이클 유리팔찌" data-price="32000" />
             </div>
+            <img src="images/B/icon/sale_scratch.png" alt="스크래치 할인" class="sale-scratch">
           </div>
           <!-- 5번 상품 -->
           <div class="product-item" data-aos="fade-up" data-aos-delay="400">
@@ -1038,7 +1040,7 @@
             <img src="images/product images/pd_img (9).png" alt="폐목 우드 트레이" class="product-image" />
             <p class="product-brand">비비작 공작소</p>
             <p class="product-name">폐목 우드 트레이</p>
-            <p class="product-price">35,000원</p>
+            <p class="product-price"><span class="sale-item">35,000원</span>28,000원</p>
             <div class="popular-rating">
               <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" class="rating-icon" />
               <span>(2,261)</span>
@@ -1046,6 +1048,7 @@
             <div class="add-to-cart">
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="폐목 우드 트레이" data-price="35000" />
             </div>
+            <img src="images/B/icon/sale_scratch.png" alt="스크래치 할인" class="sale-scratch">
           </div>
           <!-- 8번 상품 -->
           <div class="product-item" data-aos="fade-up" data-aos-delay="700">
@@ -1083,6 +1086,10 @@
           <div class="swiper-wrapper">
             <!-- 리뷰 아이템 1 -->
             <div class="swiper-slide review-item">
+              <a href="#" class="insta-link">
+                <img src="images/B/icon/insta_logo.png" alt="인스타 로고">
+                <span>@cozy_vibes12</span>
+              </a>
               <img src="images/review/review1.png" alt="리뷰1" class="review-image" />
               <h3 class="r_title">프로젝트 노하우</h3>
               <p class="bold">체커보드백</p>
@@ -1091,6 +1098,10 @@
             </div>
             <!-- 리뷰 아이템 2 -->
             <div class="swiper-slide review-item">
+              <a href="#" class="insta-link">
+                <img src="images/B/icon/insta_logo.png" alt="인스타 로고">
+                <span>@urban.nomad_7</span>
+              </a>
               <img src="images/review/review2.png" alt="리뷰2" class="review-image" />
               <h3 class="r_title">LifeSalem</h3>
               <p class="bold">버섯 조명</p>
@@ -1099,6 +1110,10 @@
             </div>
             <!-- 리뷰 아이템 3 -->
             <div class="swiper-slide review-item">
+              <a href="#" class="insta-link">
+                <img src="images/B/icon/insta_logo.png" alt="인스타 로고">
+                <span>@choco_bunny88</span>
+              </a>
               <img src="images/review/review3.png" alt="리뷰3" class="review-image" />
               <h3 class="r_title">오도즈 슾</h3>
               <p class="bold">기타 테이블</p>
@@ -1107,6 +1122,10 @@
             </div>
             <!-- 리뷰 아이템 4 -->
             <div class="swiper-slide review-item">
+              <a href="#" class="insta-link">
+                <img src="images/B/icon/insta_logo.png" alt="인스타 로고">
+                <span>@skywalker_in_blue</span>
+              </a>
               <img src="images/review/review4.png" alt="리뷰4" class="review-image" />
               <h3 class="r_title">하을</h3>
               <p class="bold">셔링 책커버</p>
@@ -1115,6 +1134,10 @@
             </div>
             <!-- 리뷰 아이템 5 -->
             <div class="swiper-slide review-item">
+              <a href="#" class="insta-link">
+                <img src="images/B/icon/insta_logo.png" alt="인스타 로고">
+                <span>@cozy_vibes12</span>
+              </a>
               <img src="images/review/review1.png" alt="리뷰1" class="review-image" />
               <h3 class="r_title">프로젝트 노하우</h3>
               <p class="bold">체커보드백</p>
@@ -1123,6 +1146,10 @@
             </div>
             <!-- 리뷰 아이템 6 -->
             <div class="swiper-slide review-item">
+              <a href="#" class="insta-link">
+                <img src="images/B/icon/insta_logo.png" alt="인스타 로고">
+                <span>@skywalker_in_blue</span>
+              </a>
               <img src="images/review/review4.png" alt="리뷰4" class="review-image" />
               <h3 class="r_title">하을</h3>
               <p class="bold">셔링 책커버</p>
@@ -1131,6 +1158,10 @@
             </div>
             <!-- 리뷰 아이템 7 -->
             <div class="swiper-slide review-item">
+              <a href="#" class="insta-link">
+                <img src="images/B/icon/insta_logo.png" alt="인스타 로고">
+                <span>@choco_bunny88</span>
+              </a>
               <img src="images/review/review3.png" alt="리뷰3" class="review-image" />
               <h3 class="r_title">오도즈 슾</h3>
               <p class="bold">기타 테이블</p>
@@ -1139,6 +1170,10 @@
             </div>
             <!-- 리뷰 아이템 1 -->
             <div class="swiper-slide review-item">
+              <a href="#" class="insta-link">
+                <img src="images/B/icon/insta_logo.png" alt="인스타 로고">
+                <span>@cozy_vibes12</span>
+              </a>
               <img src="images/review/review1.png" alt="리뷰1" class="review-image" />
               <h3 class="r_title">프로젝트 노하우</h3>
               <p class="bold">체커보드백</p>
@@ -1147,6 +1182,10 @@
             </div>
             <!-- 리뷰 아이템 2 -->
             <div class="swiper-slide review-item">
+              <a href="#" class="insta-link">
+                <img src="images/B/icon/insta_logo.png" alt="인스타 로고">
+                <span>@urban.nomad_7</span>
+              </a>
               <img src="images/review/review2.png" alt="리뷰2" class="review-image" />
               <h3 class="r_title">LifeSalem</h3>
               <p class="bold">버섯 조명</p>
@@ -1155,6 +1194,10 @@
             </div>
             <!-- 리뷰 아이템 3 -->
             <div class="swiper-slide review-item">
+              <a href="#" class="insta-link">
+                <img src="images/B/icon/insta_logo.png" alt="인스타 로고">
+                <span>@choco_bunny88</span>
+              </a>
               <img src="images/review/review3.png" alt="리뷰3" class="review-image" />
               <h3 class="r_title">오도즈 슾</h3>
               <p class="bold">기타 테이블</p>
@@ -1163,6 +1206,10 @@
             </div>
             <!-- 리뷰 아이템 4 -->
             <div class="swiper-slide review-item">
+              <a href="#" class="insta-link">
+                <img src="images/B/icon/insta_logo.png" alt="인스타 로고">
+                <span>@skywalker_in_blue</span>
+              </a>
               <img src="images/review/review4.png" alt="리뷰4" class="review-image" />
               <h3 class="r_title">하을</h3>
               <p class="bold">셔링 책커버</p>
@@ -1171,6 +1218,10 @@
             </div>
             <!-- 리뷰 아이템 5 -->
             <div class="swiper-slide review-item">
+              <a href="#" class="insta-link">
+                <img src="images/B/icon/insta_logo.png" alt="인스타 로고">
+                <span>@cozy_vibes12</span>
+              </a>
               <img src="images/review/review1.png" alt="리뷰1" class="review-image" />
               <h3 class="r_title">프로젝트 노하우</h3>
               <p class="bold">체커보드백</p>
@@ -1179,6 +1230,10 @@
             </div>
             <!-- 리뷰 아이템 6 -->
             <div class="swiper-slide review-item">
+              <a href="#" class="insta-link">
+                <img src="images/B/icon/insta_logo.png" alt="인스타 로고">
+                <span>@skywalker_in_blue</span>
+              </a>
               <img src="images/review/review4.png" alt="리뷰4" class="review-image" />
               <h3 class="r_title">하을</h3>
               <p class="bold">셔링 책커버</p>
@@ -1187,6 +1242,10 @@
             </div>
             <!-- 리뷰 아이템 7 -->
             <div class="swiper-slide review-item">
+              <a href="#" class="insta-link">
+                <img src="images/B/icon/insta_logo.png" alt="인스타 로고">
+                <span>@choco_bunny88</span>
+              </a>
               <img src="images/review/review3.png" alt="리뷰3" class="review-image" />
               <h3 class="r_title">오도즈 슾</h3>
               <p class="bold">기타 테이블</p>
