--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
             <div class="add-to-cart">
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="모어포 모레 플라스틱 비누받침" data-price="21000" />
             </div>
-            <img src="images/B/icon/sale_scratch.png" alt="스크래치 할인" class="sale-scratch">
+            <img src="images/B/icon/sale_scratch2.png" alt="스크래치 할인" class="sale-scratch">
           </div>
           
           <!-- 2번 상품 -->
@@ -1001,7 +1001,7 @@
             <div class="add-to-cart">
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="리사이클 유리팔찌" data-price="32000" />
             </div>
-            <img src="images/B/icon/sale_scratch.png" alt="스크래치 할인" class="sale-scratch">
+            <img src="images/B/icon/sale_scratch2.png" alt="스크래치 할인" class="sale-scratch">
           </div>
           <!-- 5번 상품 -->
           <div class="product-item" data-aos="fade-up" data-aos-delay="400">
@@ -1047,7 +1047,7 @@
             <div class="add-to-cart">
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="폐목 우드 트레이" data-price="35000" />
             </div>
-            <img src="images/B/icon/sale_scratch.png" alt="스크래치 할인" class="sale-scratch">
+            <img src="images/B/icon/sale_scratch2.png" alt="스크래치 할인" class="sale-scratch">
           </div>
           <!-- 8번 상품 -->
           <div class="product-item" data-aos="fade-up" data-aos-delay="700">
@@ -1275,8 +1275,10 @@
             <!-- notice1 -->
             <div class="swiper-slide notice-swiper-slide">
               <img src="images/B/e.banner/1920_notice1.png" alt="구독" />
-              <p class="notice_title">정키펑키 구독 이벤트</p>
-              <p class="notice_text">구독시 첫 구매 20% 할인쿠폰 지급</p>
+              <div class="notice-txt">
+                <p class="notice_title">정키펑키 구독 이벤트</p>
+                <p class="notice_text">구독시 첫 구매 20% 할인쿠폰 지급</p>
+              </div>
             </div>
             <!-- notice2 -->
             <div class="swiper-slide notice-swiper-slide">
